--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@mui/material": "^7.2.0",
     "chart.js": "^4.5.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-chartjs-2": "^5.3.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
